# spherical-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/spherical_tools/: __init__.py  _core.py  spherical.py
src/spherical_tools/_vendor/: slerp.py
src/spherical_tools/wrappers/: conversion.py  decorators.py  geodetic.py
